[tool.poetry]
name = "JukeBot"
version = "0.1.0"
description = "A music bot for Discord using Disnake"
authors = ["Dysta <xav4098@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
disnake = {extras = ["speed", "voice"], version = "^2.4.0"}
loguru = "^0.5.3"
uvloop = {version = "^0.16.0", optional = true}
taskipy = "^1.10.1"
python-dotenv = "^0.19.2"
shazamio = "^0.1.0"
asyncstdlib = "^3.10.4"
yt-dlp = "^2024.7.7"
pyyaml = "^6.0.1"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
isort = "^5.10.1"

[tool.poetry.extras]
speed = ["uvloop"]

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[tool.taskipy.tasks]
start = { cmd = "python -m jukebot", help = "run the bot" }
black = { cmd = "python -m black .", help = "blackify the code" }
clean = { cmd = "python -m autoflake . -r -i -v --ignore-init-module-imports --remove-all-unused-imports --remove-unused-variables", help = "remove unused code/import/variable" }
tests = { cmd = "python -m unittest -v", help = "run all the tests" }

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
