[tool.poetry]
name = "JukeBot"
version = "0.1.0"
description = "A music bot for Discord using Disnake"
authors = ["Dysta <xav4098@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.3"
taskipy = "^1.14.1"
python-dotenv = "^1.1.1"
asyncstdlib = "^3.13.1"
yt-dlp = "^2025.6.30"
pyyaml = "^6.0.2"
shazamio = "^0.8.1"
disnake = {version = "^2.11.0", extras = ["speed", "voice"]}

[tool.poetry.extras]
speed = ["uvloop"]

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
autoflake = "^2.3.1"
isort = "^5.10.1"

[tool.taskipy.tasks]
start = { cmd = "python -m jukebot", help = "run the bot" }
black = { cmd = "python -m black .", help = "blackify the code" }
clean = { cmd = "python -m autoflake . -r -i -v --ignore-init-module-imports --remove-all-unused-imports --remove-unused-variables", help = "remove unused code/import/variable" }
tests = { cmd = "python -m unittest -v", help = "run all the tests" }

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
